# THE_ALGORITHM

./: README.md  pyproject.toml  setup.py  test_the_algorithm.py  the_algorithm.py
.github/workflows/: test.yml
src/the_algorithm/: __init__.py  test_the_algorithm.py
