[project]
name = "the-algorithm"
version = "1.2"
description = "The Pub Standards Algorithm"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ['python-dateutil>=2.4.0']

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
    "types-python-dateutil>=2.9.0.20240906",
]

[tool.ruff]
line-length = 110
