[project]
name = "the-algorithm"
version = "2.0"
description = "The Pub Standards Algorithm"
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
    "types-pytz>=2024.1.0.20240417",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM"]
ignore = ["F401"]
